--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+/target
+/lib
+/classes
+/checkouts
+/bin
+/doc
+/.settings
 pom.xml
-*jar
-/lib/
-/classes/
-/targets/
+*~
+*.jar
+*.class
 .lein-deps-sum
+.lein-failures
+.lein-plugins
+.project
+.classpath
