--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: clojure
 lein: lein2
+script:
+- lein2 test
+- lein2 all test
 jdk:
-  - openjdk7
-  - openjdk6
+- openjdk7
+- oraclejdk7
+- oraclejdk8
