--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 sudo: false
 language: clojure
-lein: lein2
 script:
-- lein2 test
-- lein2 all test
+- lein test
+- lein all test
 jdk:
-- openjdk7
-- oraclejdk7
-- oraclejdk8
+- openjdk8
